--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nuxt/typescript-build": "^0.5.5",
     "@nuxtjs/style-resources": "^1.0.0",
+    "noop": "^0.2.2",
     "nuxt": "^2.11.0",
     "nuxt-property-decorator": "^2.5.0",
     "reset.css": "^2.0.2"
