--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -18,4 +18,4 @@ jobs:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
-      - run: yarn run lintjs
+      - run: yarn run lintjs:fix --max-warning 0
