--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -19,3 +19,19 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
       - run: yarn run lintjs:fix --max-warnings 0
+      - name: 自動修正が行われたかを取得
+        id: diff
+        run: |
+          echo "::set-output name=fixed::$(if (git diff --shortstat | grep '[0-9]'); then echo yes; fi)"
+      - if: steps.diff.outputs.fixed == 'yes'
+        run: |
+          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          if (git diff --shortstat | grep '[0-9]'); then \
+            git add .; \
+            git commit -m "👕 Fixed auto-fixable ESLint errors by github-actions"; \
+            git push origin HEAD:${GITHUB_REF}; \
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
