💩 修正可能なESLintエラーを追加

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -22,7 +22,7 @@ jobs:
       - name: 自動修正が行われたかを取得
         id: diff
         run: |
-          echo "::set-output name=fixed::$(if (git diff --shortstat | grep '[0-9]'); then echo yes; fi)"
+          echo "::set-output name=fixed::if (git diff --shortstat | grep '[0-9]'); then echo yes; fi;"
       - run: echo $LOG
         env:
           LOG: ${{ steps.diff.outputs.fixed }}
