--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -28,9 +28,9 @@ jobs:
           LOG: ${{ steps.diff.outputs.fixed }}
       - if: steps.diff.outputs.fixed == 'yes'
         run: |
-          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git remote set-url origin https://github-actions:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
+          git config --global user.name $GITHUB_ACTOR
+          git config --global user.email $GITHUB_ACTOR@users.noreply.github.com"
           git add .;
           git commit -m "👕 Fixed auto-fixable ESLint errors by github-actions";
           git push origin HEAD:${GITHUB_REF};
