--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git remote set-url origin https://github-actions:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
           git config --global user.name $GITHUB_ACTOR
-          git config --global user.email $GITHUB_ACTOR@users.noreply.github.com
+          git config --global user.email ${GITHUB_ACTOR}@users.noreply.github.com
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 自動修正の差分をプッシュ
