--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -27,7 +27,7 @@ jobs:
         if: steps.diff.outputs.fixed == 'yes'
         id: setup-git
         run: |
-          git remote set-url origin https://github-actions:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
+          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
           git config --global user.name $GITHUB_ACTOR
           git config --global user.email ${GITHUB_ACTOR}@users.noreply.github.com
        env:
