--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -25,7 +25,6 @@ jobs:
           if (git diff --shortstat | grep '[0-9]'); then echo "::set-output name=fixed::yes"; fi
       - name: Gitアカウント情報を設定
         if: steps.diff.outputs.fixed == 'yes'
-        id: setup-git
         run: |
           git remote set-url origin https://github-actions:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
           git config --global user.name $GITHUB_ACTOR
@@ -33,7 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 自動修正の差分をプッシュ
-        needs: setup-git
+        if: steps.diff.outputs.fixed == 'yes'
         run: |
           git add .;
           git commit -m "👕 Fixed auto-fixable ESLint errors by github-actions";
