💩 ESLintエラーのないコミット

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -37,3 +37,4 @@ jobs:
           git add .;
           git commit -m "👕 Fixed auto-fixable ESLint errors by github-actions";
           git push origin HEAD:${GITHUB_REF};
+# foo
