💩 修正可能なESLintエラーを追加

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -35,6 +35,6 @@ jobs:
         if: steps.diff.outputs.fixed == 'yes'
         run: |
           git add .;
-          git commit -m "👕 Fixed auto-fixable ESLint errors by github-actions";
+          git commit -m "ESLintエラーの自動修正分";
           git push origin HEAD:${GITHUB_REF};
 # foo
