--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -26,10 +26,9 @@ jobs:
           pip install awscli
       - name: S3へデプロイ
         run: |
-          aws s3 sync $SOURCE_DIR s3://$AWS_S3_BUCKET
+          aws s3 sync $SOURCE_DIR s3://$AWS_S3_BUCKET --acl public-read
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SOURCE_DIR: ./dist
           AWS_S3_BUCKET: gh-actions-pr-preview
-
