--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -1,5 +1,5 @@
 name: Pull Requestプレビュー
-on: push
+on: pull_request
 
 jobs:
   deploy:
@@ -26,7 +26,7 @@ jobs:
           pip install awscli
       - name: S3へデプロイ
         run: |
-          aws s3 sync $SOURCE_DIR s3://$AWS_S3_BUCKET --acl public-read
+          aws s3 sync $SOURCE_DIR s3://$AWS_S3_BUCKET/1 --acl public-read
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
