--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install awscli
+      - run: echo $GITHUB_REF | sed -e 's/refs\/pull\///' -e 's/\/merge//'
       - name: Pull Request番号を取得
         id: pull-number
         run: echo "::set-output name=number::$($GITHUB_REF | sed -e 's/refs\/pull\///' -e 's/\/merge//')"
