--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass-loader": "^8.0.0",
     "stylelint": "^12.0.1",
     "stylelint-config-recess-order": "^2.0.3",
-    "stylelint-config-standard": "^19.0.0"
+    "stylelint-config-standard": "^19.0.0",
+    "testcafe": "^1.8.0"
   }
 }
