--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nuxt/typescript-build": "^0.5.5",
     "@nuxtjs/style-resources": "^1.0.0",
+    "lodash-es": "^4.17.15",
     "nuxt": "^2.11.0",
     "nuxt-property-decorator": "^2.5.0",
     "reset.css": "^2.0.2"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@nuxt/typescript-runtime": "^0.3.6",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
+    "@types/lodash-es": "^4.17.3",
     "eslint": "^6.8.0",
     "node-sass": "^4.13.0",
     "pug": "^2.0.4",
