💄 CSSの環境整理

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash-es": "^4.17.15",
     "nuxt": "^2.11.0",
     "nuxt-property-decorator": "^2.5.0",
-    "reset.css": "^2.0.2"
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
     "@nuxt/typescript-runtime": "^0.3.6",
