--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
-  "extends": "@nuxtjs/eslint-config-typescript"
+  "extends": "@nuxtjs/eslint-config-typescript",
+  "overrides": [
+    {
+      "files": ["e2e/*.spec.ts"],
+      "plugins": [
+        "eslint-plugin-testcafe"
+      ]
+    }
+  ]
 }
