--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -36,3 +36,21 @@ jobs:
           SOURCE_DIR: ./dist
           AWS_S3_BUCKET: gh-actions-pr-preview
           PULL_NUMBER: ${{ steps.pull-number.outputs.number }}
+  log:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ${{ github.event.pull_request.action }}
+  comment:
+    if: github.event.pull_request.action == 'action'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@0.2.0
+        with:
+          github-token: ${{github.token}}
+          script: |
+            const { number } = context.payload.pull_request
+
+            github.issues.createComment({
+              ...context.issue,
+              body: `このPull Requestのプレビューは以下のURLでご確認ください。\n\n> http://gh-actions-pr-preview.s3-website-ap-northeast-1.amazonaws.com/${number}`
+            })
