--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "overrides": [
     {
       "files": ["e2e/*.spec.ts"],
+      "extends": ["plugin:testcafe/recommended"],
       "plugins": [
         "eslint-plugin-testcafe"
       ]
