--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,13 @@
 {
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-recess-order"
-  ]
+    "stylelint-config-recess-order",
+    "stylelint-config-recommended-scss"
+  ],
+  "plugins": [
+    "stylelint-scss"
+  ],
+  "rules": {
+    "no-duplicate-selectors": null
+  }
 }
