--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "sass-loader": "^8.0.0",
     "stylelint": "^12.0.1",
     "stylelint-config-recess-order": "^2.0.3",
+    "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^19.0.0",
+    "stylelint-scss": "^3.14.2",
     "testcafe": "^1.8.0"
   }
 }
